welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.code
def dogHouse() {
	setCouleurCorps(Color.red)
}
